--- a/2019/01-07-preconditioning-minneapolis.tex
+++ b/2019/01-07-preconditioning-minneapolis.tex
@@ -135,6 +135,7 @@ backend=biber]{biblatex}
   \inst{1}Department of Computer Science, Durham University\\
   \inst{*}\texttt{lawrence.mitchell@durham.ac.uk}}
 
+\date{July 2, 2019}
 \title{Flexible computational abstractions for complex preconditioners}
 
 \usepackage{tikz}
