--- a/2019/01-07-preconditioning-minneapolis.tex
+++ b/2019/01-07-preconditioning-minneapolis.tex
@@ -1329,7 +1329,7 @@ class MacroStar(OrderedRelaxation):
         \begin{column}{0.5\textwidth}
           {\scriptsize
 \begin{verbatim}
--ksp_type cg
+-ksp_type gmres
 -pc_type mg
 -mg_levels_
    -pc_type python
@@ -1405,7 +1405,7 @@ class MacroStar(OrderedRelaxation):
         \begin{column}{0.5\textwidth}
           {\scriptsize
 \begin{verbatim}
--ksp_type cg
+-ksp_type gmres
 -pc_type mg
 -mg_levels_
    -pc_type python
